--- a/QuanLyKhachSan/QuanLyKhachSan/Views/Admin/DSDichVu.cshtml
+++ b/QuanLyKhachSan/QuanLyKhachSan/Views/Admin/DSDichVu.cshtml
@@ -34,7 +34,7 @@
                         <td>@dv.MaDichVu</td>
                         <td>@dv.TenDichVu</td>
                         <td>@dv.GiaDichVu</td>
-                        <td class="row">
+                        <td class="row" style="white-space: nowrap">
                             <a href="/Admin/SuaDichVu/@dv.MaDichVu" class="btn btn-warning btn-sm"><i class="fa fa-pencil" aria-hidden="true"></i></a>
                             <a class="btn btn-danger btn-sm" href="#" data-toggle="modal" data-target="#myModal" onclick="myFunction('/Admin/XoaDichVu/@dv.MaDichVu')"><i class="fa fa-trash" aria-hidden="true"></i></a>
                         </td>
