--- a/QuanLyKhachSan/QuanLyKhachSan/Views/Admin/DSTaiKhoan.cshtml
+++ b/QuanLyKhachSan/QuanLyKhachSan/Views/Admin/DSTaiKhoan.cshtml
@@ -52,7 +52,7 @@
                             <td style="color: red; font-weight: bold">X</td>
 
                         }
-                        <td class="row">
+                        <td class="row" style="white-space: nowrap">
                             <a href="/Admin/SuaTaiKhoan/@tk.TenTaiKhoan" class="btn btn-warning btn-sm"><i class="fa fa-pencil" aria-hidden="true"></i></a>
                             <a class="btn btn-danger btn-sm" href="#" data-toggle="modal" data-target="#myModal" onclick="myFunction('/Admin/XoaTaiKhoan/@tk.TenTaiKhoan')"><i class="fa fa-trash" aria-hidden="true"></i></a>
                         </td>
