--- a/QuanLyKhachSan/QuanLyKhachSan/Views/SharedAdmin/_MenuTraiAdmin.cshtml
+++ b/QuanLyKhachSan/QuanLyKhachSan/Views/SharedAdmin/_MenuTraiAdmin.cshtml
@@ -58,5 +58,12 @@
                 </div>
             </div>
         </div>
+        <div class="panel panel-default panel-info">
+            <div class="panel-heading">
+                <h4 class="panel-title">
+                    <a href="/Admin/ThanhToan"><b><i class="fa fa-money-bill"></i>&nbsp;Thanh toán</b></a>
+                </h4>
+            </div>
+        </div>
     </div>
 </div>
