--- a/QuanLyKhachSan/QuanLyKhachSan/Views/TrangChu/TrangChu.cshtml
+++ b/QuanLyKhachSan/QuanLyKhachSan/Views/TrangChu/TrangChu.cshtml
@@ -37,7 +37,7 @@
             function changeLabel() {
                 var loaitk = document.getElementById('LoaiTimKiem');
                 if (loaitk.value == 'Giá Phòng') {
-                    document.getElementById('don-vi').innerText = 'nghìn đồng';
+                    document.getElementById('don-vi').innerText = 'VNĐ';
                 } else {
                     document.getElementById('don-vi').innerText = 'm\xB2';
                 }
