--- a/QuanLyKhachSan/QuanLyKhachSan/Views/Admin/DSLoaiPhong.cshtml
+++ b/QuanLyKhachSan/QuanLyKhachSan/Views/Admin/DSLoaiPhong.cshtml
@@ -45,7 +45,7 @@
                     <td style="text-align: center">
                         <img src="@lp.DuongDanAnh" style="width: 50px; height: 50px;" alt="Alternate Text" />
                     </td>
-                    <td class="row">
+                    <td class="row" style="white-space: nowrap">
                         <a href="/Admin/SuaLoaiPhong/@lp.MaLoai" class="btn btn-warning btn-sm"><i class="fa fa-pencil" aria-hidden="true"></i></a>
                         <a class="btn btn-danger btn-sm" href="#" data-toggle="modal" data-target="#myModal" onclick="myFunction('/Admin/XoaLoaiPhong/@lp.MaLoai')"><i class="fa fa-trash" aria-hidden="true"></i></a>
                     </td>
