--- a/QuanLyKhachSan/QuanLyKhachSan/Views/Admin/ThanhToan.cshtml
+++ b/QuanLyKhachSan/QuanLyKhachSan/Views/Admin/ThanhToan.cshtml
@@ -1,10 +1,10 @@
 ﻿@{
-    ViewBag.Title = "KeHoachPhong";
+    ViewBag.Title = "ThanhToan";
     Layout = "~/Views/SharedAdmin/_Layout.cshtml";
 }
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<h2>Xem kế hoạch phòng</h2>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<h2>Thanh toán</h2>
 <section class="content-header">
     <div class="container-fluid">
         <div class="row mb-2">
@@ -24,45 +24,8 @@
         <div class="card-body">
             <div class="row ">
                 <div class="col-md-3">
-                    <label class="col-md-12 " style="margin-top: 10px;">Tài khoản</label>
-                    <input class="form-control" placeholder="Nhập..." type="text" id="TenTaiKhoan" />
-                </div>
-                <div class="col-md-3">
-                    <label class="col-md-12 " style="margin-top: 10px;">Mã phòng</label>
-                    <input class="form-control" placeholder="Nhập..." type="text" id="MaPhong" />
-                </div>
-                <div class="col-md-3">
                     <label class="col-md-12 " style="margin-top: 10px;">Tên phòng</label>
                     <input class="form-control" placeholder="Nhập..." type="text" id="TenPhong" />
-                </div>
-                <div class="col-md-3">
-                    <label class="col-md-12 " style="margin-top: 10px;">Ngày đặt</label>
-                    <input class="form-control" placeholder="Nhập..." type="date" id="NgayDat" />
-                </div>
-                <div class="col-md-3">
-                    <label class="col-md-12 " style="margin-top: 10px;">Ngày đến</label>
-                    <input class="form-control" placeholder="Nhập..." type="date" id="NgayDen" />
-                </div>
-                <div class="col-md-3">
-                    <label class="col-md-12 " style="margin-top: 10px;">Ngày trả</label>
-                    <input class="form-control" placeholder="Nhập..." type="date" id="NgayTra" />
-                </div>
-                <div class="col-md-3">
-                    <label class="col-md-12 " style="margin-top: 10px;">Phương thức thanh toán</label>
-                    <select class="form-control" id="PhuongThucThanhToan">
-                        <option value="null">Chọn phương thức</option>
-                        <option value="1">Tiền mặt</option>
-                        <option value="2">Chuyển khoản</option>
-                    </select>
-                </div>
-                <div class="col-md-3">
-                    <label class="col-md-12 " style="margin-top: 10px;">Trạng thái</label>
-                    <select class="form-control" id="TrangThai">
-                        <option value="null">Chọn trạng thái</option>
-                        <option value="0">Chờ thanh toán</option>
-                        <option value="1">Đã thanh toán</option>
-                        <option value="2">Đã hủy</option>
-                    </select>
                 </div>
             </div>
         </div>
@@ -97,8 +60,6 @@
                 <h4 class="modal-title">Thông Báo</h4>
             </div>
             <div class="modal-body">
-                <p>Bạn có chắc chắn muốn xác nhận phòng này đã được thanh toán</p>
-                <div id="infoPayment"></div>
                 <p>Bạn có chắc chắn muốn xác nhận phòng này đã được thanh toán</p>
                 <div id="infoPayment"></div>
                 <div class="form-check">
@@ -165,6 +126,7 @@
         </div>
     </div>
 </div>
+
 <script>
     var link;
     var type_pay = 0;
@@ -196,6 +158,7 @@
             </ul>
             `
         );
+        var paymen_type = $('#flexRadioDefault1:checked').val() != undefined ? 2 : 1;
         link = '/Admin/XacNhanThanhToan/' + ma;
     }
 
@@ -216,7 +179,6 @@
                 `<tr>
                 <td>${x.TenTaiKhoan}</td>
                 <td>${x.HoTen}</td>
-                <td>${x.MaPhong}</td>
                 <td>${x.TenPhong}</td>
                 <td>${x.NgayDatString}</td>
                 <td>${x.NgayDenString}</td>
@@ -226,7 +188,6 @@
                 <td style="color: ${_colorStatus}">${x.TrangThaiString}</td>
                 <td>${x.PhuongThucThanhToanString}</td>
                 <td style='white-space: nowrap'><a class="btn btn-danger btn-sm" href="#" data-toggle="modal" data-target="#myModal" onclick="myFunction('/Admin/HuyKeHoachPhong/${x.MaDatPhong}')"><i class="fa fa-trash" aria-hidden="true"></i></a>
-                    <a class="btn btn-primary btn-sm" href="#" data-toggle="modal" data-target="#paymentModal" onclick="openPaymentModal('${x.DichVu}')"><i class="fa fa-edit" aria-hidden="true"></i></a>
                     <a class="btn btn-success btn-sm" href="#" data-toggle="modal" data-target="#completedModal" onclick="completed(${x.MaDatPhong}, ${x.ThanhTien}, ${x.GiaThue}, '${x.DichVu}')"><i class="fa fa-check" aria-hidden="true"></i></a>
                 </td>
             </tr>`
@@ -238,7 +199,6 @@
                         <tr>
                             <th scope="col">Tài khoản</th>
                             <th scope="col">Họ tên</th>
-                            <th scope="col">Mã phòng</th>
                             <th scope="col">Tên phòng</th>
                             <th scope="col">Ngày đặt</th>
                             <th scope="col">Ngày đến</th>
@@ -284,14 +244,7 @@
 
     search = () => {
         var req = {
-            TenPhong: $('#TenPhong').val(),
-            TenTaiKhoan: $('#TenTaiKhoan').val(),
-            MaPhong: $('#MaPhong').val(),
-            NgayDat: $('#NgayDat').val(),
-            NgayDen: $('#NgayDen').val(),
-            NgayTra: $('#NgayTra').val(),
-            TrangThai: $('#TrangThai').val(),
-            PhuongThucThanhToan: $('#PhuongThucThanhToan').val(),
+            TenPhong: $('#TenPhong').val(),          
         }
         postData('/Admin/KeHoachPhongFilter', req)
             .then((result) => {
